--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "pnpm": ">=3"
     },
     "dependencies": {
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "socket.io": "^4.7.5"
     }
 }
